# exodus

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  aiml_import_testing_report.md  aiml_state_snapshot_mode_report.md  clang_process_isolation_sprint_plan.md  exodus.md  misra_coverage.md  prefab_ui_expansion_plan.md  pyproject.toml  unsupported_misra_rules.md
doc/: asset_management.md  dependency_resolution_report.md  git_packages_and_wasm_2026-05-14.md  unsupported_misra_rules.md
exodus/: __init__.py  main.py
exodus/core/: cli.py  logger.py
exodus/models/: misra.py  packages.py  project.py
exodus/templates/: hook_example.py
exodus/templates/c-simple/: main.c
exodus/templates/cpp-conan-fmt/: exodus.json
exodus/templates/cpp-conan-fmt/src/: main.cpp
exodus/templates/cpp-simple/: exodus.json  main.cpp
exodus/templates/misra-c2012/: exodus.json
exodus/templates/misra-c2012/src/: misra_c_2012_part1.c  misra_c_2012_part2.c  misra_c_2012_part3_fatal.c
exodus/templates/misra-c2023/: exodus.json
exodus/templates/misra-c2023/src/: misra_c_2012_part1.c  misra_c_2012_part2.c  test_unused.c
exodus/templates/misra-cpp2008/: exodus.json
exodus/templates/misra-cpp2008/include/: rule_3_1_1_bad.hpp
exodus/templates/misra-cpp2008/src/: main.cpp  misra_cpp_2008.cpp  misra_cpp_2008_extra.cpp  r16_2_3_no_guard.hpp
exodus/templates/misra-cpp2023/: exodus.json
exodus/templates/misra-cpp2023/include/: rule_3_1_1_bad.hpp
exodus/templates/misra-cpp2023/src/: main.cpp  misra_cpp_2008.cpp  misra_cpp_2008_extra.cpp  no_guard.hpp  unnamed_namespace.hpp
exodus/tools/: aiml_diagram.py  gitignore.py
exodus/tools/analyze/: analyze.py  clang_worker.py  libclang_config.py  misra_clang_rules.py  misra_clang_rules.pyi  misra_common_postprocess_rules.py  misra_cpp_class_rules.py  misra_cpp_exception_rules.py  misra_cpp_misc_rules.py  misra_cpp_postprocess_rules.py  misra_fallback_scans.py  misra_profiles.py  misra_resource_postprocess_rules.py  misra_rules.py  misra_rules.pyi  misra_type_utils.py
exodus/tools/clean/: clean.py
exodus/tools/extract/: __init__.py  extract.py
exodus/tools/image/: __init__.py  image.py
exodus/tools/init/: init.py
exodus/tools/pkg/: __init__.py  conan_backend.py  package_manager.py
exodus/tools/sbom/: __init__.py  sbom.py
exodus/tools/size/: size.py
spec/: exodus.md
tests/: test_aiml_diagram.py  test_analyze_cli.py  test_analyze_process_isolation.py  test_build_dependencies.py  test_conan_backend.py  test_gitignore_tool.py  test_image_tool.py  test_multi_config_commands.py  test_sbom.py
typings/clang/: __init__.pyi  cindex.pyi
